# trading-bot

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  query  requirements.txt
.mongo-data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-1865bda4-5f42-44a7-8360-973ee94b8dc7.wt  collection-3c2e9d1d-d4c6-4df7-8c69-8f8e891165ce.wt  collection-d65360f2-73bb-4e92-bef1-8cf344e55ac0.wt  index-b83dd95a-ff23-486d-aa28-fe8ffbc015b9.wt  index-c1ace975-2131-41cd-ab40-69cce37577d9.wt  index-d7966f9f-fc39-434a-a3ba-cee65c9c9ce1.wt  index-eb0409ff-0478-400c-a739-0cea272acfba.wt  index-ff0bb5d7-1fc6-44fc-9eab-40029f4e23fd.wt  sizeStorer.wt
.mongo-data/_tmp/spilldb/: WiredTiger.turtle  WiredTiger.wt
.mongo-data/diagnostic.data/: metrics.2026-03-26T12-42-36Z-00000  metrics.2026-03-26T12-48-08Z-00000  metrics.2026-03-26T13-06-49Z-00000  metrics.2026-03-26T13-07-54Z-00000  metrics.interim  metrics.interim.temp
app/: config.py
app/bot/: formatting.py  handlers.py  keyboards.py  runner.py  state.py
app/db/: mongo.py
app/domain/: execution.py  types.py
app/integrations/pocketoption/: client.py  errors.py  http.py
app/repo/: affiliate.py  credentials.py  signals.py  system.py  tokens.py  trades.py  users.py
app/services/: affiliate_email.py  assets.py  market_data.py  martingale.py  pocketoption_auth.py  strategy.py  strategy_worker.py  token_deposit.py  trade_engine.py  ultra_precision.py
app/web/: app.py
tests/: test_hardening.py  test_smoke.py
