[project]
name = "multiuser-trading-bot-stage1"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "aiogram>=3.4.1",
  "motor>=3.3.2",
  "pydantic>=2.6.1",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "orjson>=3.10.0",
  "cryptography>=43.0.0",
  "websockets>=12.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[tool.ruff]
line-length = 100
